@@ -50,13 +50,19 @@
 
 extern SCM scm_mkstrport (SCM pos, SCM str, long modes, const char * caller);
 extern SCM scm_strport_to_string (SCM port);
+extern SCM scm_object_to_string (SCM obj);
 extern SCM scm_call_with_output_string (SCM proc);
-extern SCM scm_strprint_obj (SCM obj);
 extern SCM scm_call_with_input_string (SCM str, SCM proc);
 extern SCM scm_read_0str (char *expr);
 extern SCM scm_eval_0str (const char *expr);
 extern SCM scm_eval_string (SCM string);
 extern void scm_init_strports (void);
+
+#if (SCM_DEBUG_DEPRECATED == 0)
+
+extern SCM scm_strprint_obj (SCM obj);
+
+#endif /* SCM_DEBUG_DEPRECATED == 0 */
 
 #endif  /* STRPORTSH */
 
